--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "mint-ui": "^2.2.13",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-verify-plugin": "^2.0.9"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
